feat: M7/M8 polish, open-source scaffolding, and update checking (v0.1.0) (#1)
* docs: license the project under Apache 2.0

Without a license the repository is "all rights reserved", so making it
public would still leave nobody able to fork, modify or redistribute it.

Apache 2.0 over MIT for three reasons that matter here: it grants patent
rights explicitly and terminates them on a patent suit, it states that
contributions are licensed inbound on the same terms (so no separate
CLA), and its Section 6 withholds trademark rights, which is the hook
NOTICE uses to keep the Corta name, the pangolin mascot and the app icon
out of the grant. Fork the code; re-brand the fork.

* docs: add a README, a security policy and a code of conduct

The repository had no front page. The README states what Corta is, the
measured M6 numbers including the one that misses its target, and the
non-goals — a reader deciding whether to open a feature request for a
multiplexer should learn the answer before typing, not after.

SECURITY.md is the reporting process only; docs/SECURITY.md remains the
threat model. It names the deliberate absences, terminal title queries
and OSC 52 reads among them, as out of scope, because they will
otherwise arrive as vulnerability reports.

CONTRIBUTING.md gains the entry points these files create and records
that contributions are inbound under Apache 2.0 Section 5.

* ci: add a build-and-test workflow and issue and PR templates

Two jobs: the SwiftPM core, which also replays the fuzz corpus and runs a
short mutation pass, and the Xcode app tests. The runner has no signing
identity, so the app builds ad-hoc signed; UI tests are skipped, since a
window-server session on a hosted runner does not stand in for the
human launch that docs/CONFORMANCE.md 4.4 requires.

The PR template's conditional sections are the three rules that tests
have historically failed to enforce: launch the app for app-layer
changes, re-measure frame CPU after touching the render loop, r